--- a/src/components/PostSide/PostSide.css
+++ b/src/components/PostSide/PostSide.css
@@ -2,10 +2,21 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    height: 100vh;
-    /* overflow: auto; */
+    /* height: 100%; */
+    /* margin-top: 3rem; */
 }
 .posts{
-    overflow: auto;
+    /* display: flex; */
+    /* flex-direction: column; */
+    margin-top: 4rem;
+    overflow: scroll;
+    position: relative;
+
+
+}
+.main{
+    /* margin-top: -2rem; */
+    width: 52rem;
+    overflow: scroll;
 
 }
